<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_height="match_parent"
              android:layout_width="match_parent" android:orientation="vertical" android:gravity="center">

    <ImageView
            android:id="@+id/coupon_IMGV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/coupon_image"
            app:srcCompat="@drawable/coupon_hamburger" />

    <TextView
            android:id="@+id/click_coupon_TV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lato"
            android:text="@string/click_coupon"
            android:textColor="@android:color/white"
            android:textSize="30sp"
            android:textStyle="bold" />

    <Button
            android:id="@+id/classic_coupon_BTN"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="#EB9E3E"
            android:fontFamily="@font/lato"
            android:text="@string/classic_coupom"
            android:textColor="@android:color/white"
            android:textSize="18sp" />

    <Button
            android:id="@+id/email_coupon_BTN"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="#CE3C3E"
            android:fontFamily="@font/lato"
            android:text="@string/email_coupom"
            android:textColor="@android:color/white"
            android:textSize="18sp" />
</LinearLayout>