<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:id="@+id/layout"
                                                   android:layout_height="match_parent"
                                                   android:layout_width="match_parent">
    <TextView
            android:text="@string/release_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" android:id="@+id/release_date_header_TV" android:textStyle="bold"
            android:textColor="@android:color/black" android:textSize="18sp"/>
    <TextView
            android:text="09/08/2019"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/release_date_TV"
            app:layout_constraintTop_toBottomOf="@+id/release_date_header_TV"
            app:layout_constraintStart_toStartOf="@+id/release_date_header_TV" android:layout_marginTop="5dp"
            android:textColor="@android:color/black" android:textSize="16sp"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/unique_code_header_TV" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp"
            app:layout_constraintTop_toTopOf="@+id/release_date_header_TV"
            app:layout_constraintBottom_toBottomOf="@+id/release_date_header_TV" android:text="@string/unique_code"
            android:textStyle="bold" android:textColor="@android:color/black" android:textSize="18sp"/>
    <TextView
            android:text="V-25-iT-9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/unique_code_TV"
            android:layout_marginTop="5dp"
            app:layout_constraintTop_toBottomOf="@+id/unique_code_header_TV" android:textSize="16sp"
            android:textColor="@android:color/black"
            app:layout_constraintStart_toStartOf="@+id/unique_code_header_TV"/>
    <ImageView
            android:layout_width="0dp"
            android:layout_height="150dp" app:srcCompat="@drawable/coupon_hamburger"
            android:id="@+id/generated_coupon_IMGV"
            app:layout_constraintTop_toBottomOf="@+id/release_date_TV" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:contentDescription="@string/image_content_description"
            app:layout_constraintBottom_toTopOf="@+id/guideline1"
            android:layout_marginStart="16dp" android:layout_marginEnd="16dp"/>
    <androidx.constraintlayout.widget.Guideline android:layout_width="wrap_content" android:layout_height="wrap_content"
                                                android:id="@+id/guideline1"
                                                android:orientation="horizontal"
                                                app:layout_constraintGuide_percent="0.31"/>
    <TextView
            android:text="@string/generated_code_rules"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/generated_code_rules_TV" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="@+id/guideline1" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/guideline2" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" app:autoSizeTextType="uniform" android:textColor="@android:color/black"/>
    <androidx.constraintlayout.widget.Guideline android:layout_width="wrap_content" android:layout_height="wrap_content"
                                                android:id="@+id/guideline2"
                                                android:orientation="horizontal"
                                                app:layout_constraintGuide_percent="0.7017784"/>
    <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/print_or_save_CRDV"
            app:layout_constraintTop_toBottomOf="@id/guideline2"
            app:layout_constraintBottom_toTopOf="@+id/send_coupon_CRDV" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp" android:layout_marginTop="8dp" app:cardBackgroundColor="#FFC300"
            app:cardCornerRadius="5dp">
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent" android:gravity="center">
            <TextView
                    android:text="@string/print_or_save_to_pdf"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/print_or_save_TV" android:gravity="center"
                    android:textSize="30sp" android:textColor="@android:color/white"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/send_coupon_CRDV"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintTop_toBottomOf="@+id/print_or_save_CRDV"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp" android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp" app:cardBackgroundColor="#FFC300" app:cardCornerRadius="5dp">
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent" android:gravity="center">
            <TextView
                    android:text="@string/send_coupon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/send_coupon_TV" android:textSize="30sp"
                    android:textColor="@android:color/white"/>
            <TextView
                    android:text="@string/delivery_within_twentyfour_hours"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/delivery_under_twentyfour_hours_TV" android:textSize="22sp"
                    android:textColor="@android:color/white"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>